--- a/petpack/index.html
+++ b/petpack/index.html
@@ -106,6 +106,7 @@
 
 <body>
     <div class="modal_hide modal">
+        <div class="modal_back"></div>
         <h3 class="modal-x">&times;</h3>
         <h4 class="modal-title">Allay Popsicle</h4>
         <div class="modal-content"><img class="modal-image" src="">
