--- a/petpack/index.html
+++ b/petpack/index.html
@@ -100,6 +100,7 @@
             position: fixed;
             width: 100vw;
             height: 100vw;
+            background-color: rgba(0,0,0,0.25);
         }
     </style>
 </head>
