--- a/petpack/index.html
+++ b/petpack/index.html
@@ -37,7 +37,7 @@
         }
 
         .modal {
-
+            z-index: 1000;
             position: fixed;
             inset: 0;
             justify-content: center;
@@ -100,7 +100,8 @@
             position: fixed;
             width: 100vw;
             height: 100vw;
-            background-color: rgba(0,0,0,0.25);
+            background-color: rgba(0,0,0,0.5);
+            z-index: -1;
         }
     </style>
 </head>
