--- a/petpack/index.html
+++ b/petpack/index.html
@@ -216,6 +216,8 @@
             const modal = document.querySelector(".modal")
             modal.classList.remove("modal_hide")
             modal.classList.add("modal_shown")
+            const modalTitle = document.querySelector(".modal_title")
+            modalTitle.textContent = title
         });
     }
 </script>
