--- a/petpack/index.html
+++ b/petpack/index.html
@@ -216,7 +216,7 @@
             const modal = document.querySelector(".modal")
             modal.classList.remove("modal_hide")
             modal.classList.add("modal_shown")
-            const modalTitle = document.querySelector(".modal_title")
+            const modalTitle = document.querySelector(".modal-title")
             modalTitle.textContent = title
         });
     }
