--- a/petpack/index.html
+++ b/petpack/index.html
@@ -174,9 +174,8 @@
                     //item creation
                     var newDiv = document.createElement('div')
                     newDiv.classList.add("item")
-                    newDiv.dataset.img_src = `previews/${shortCategories[scx]}/${shortsCategories[scx]}/${id}.png`;
                     newDiv.innerHTML = `<img src="${newDiv.dataset.img_src}"><p class="imgdesc">${title}</p>`
-                    event_temp(newDiv, title, id)
+                    event_temp(newDiv, title, id, `previews/${shortCategories[scx]}/${shortsCategories[scx]}/${id}.png`)
 
                 } else {
                     // if there isn't a subcategory
@@ -190,9 +189,8 @@
                     var newDiv = document.createElement('div')
                     newDiv.dataset.id = id;
                     newDiv.classList.add("item")
-                    newDiv.dataset.img_src = `previews/${shortCategories[scx]}/${id}.png`
                     newDiv.innerHTML = `<img src="${newDiv.dataset.img_src}"><p class="imgdesc">${title}</p>`
-                    event_temp(newDiv, title, id)
+                    event_temp(newDiv, title, id, `previews/${shortCategories[scx]}/${id}.png`)
                     //console.log(document.body.innerHTML)
                     //console.log(document.head.innerHTML)
                 }
@@ -210,14 +208,17 @@
             modal.classList.add("modal_hide")
     }
     //modal logic
-    function event_temp(newDiv, title, id) {
+    function event_temp(newDiv, title, id, imgSrc) {
         newDiv.addEventListener("click", () => {
             console.log("Clicked item:", title, id);
             const modal = document.querySelector(".modal")
             modal.classList.remove("modal_hide")
             modal.classList.add("modal_shown")
             const modalTitle = document.querySelector(".modal-title")
+            const modalImage = document.querySelector(".modal-image")
             modalTitle.textContent = title
+            modalImage.src = imgSrc
+            
         });
     }
 </script>
