--- a/petpack/index.html
+++ b/petpack/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Name II Pet Pack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             background-color: #070e12;
@@ -110,8 +111,8 @@
     <div class="modal_hide modal">
         <div class="modal_back"></div>
         <h3 class="modal-x">&times;</h3>
-        <h4 class="modal-title">Allay Popsicle</h4>
-        <div class="modal-content"><img class="modal-image" src="">
+        <h4 class="modal-title"></h4>
+        <div class="modal-content"><img class="modal-image">
             <p class="modal-desc">Creator: sally_5808<br>
                 Category: Allays Doing Things<br>
                 Name Tag: Allay Popsicle</p>
