--- a/petpack/index.html
+++ b/petpack/index.html
@@ -85,7 +85,7 @@
             margin: 6px;
         }
 
-        .modal-desc-portait {
+        .modal-desc.portrait {
             line-height: 1.6;
             text-align: center;
             padding: 6px;
@@ -109,7 +109,7 @@
             margin-top: 0;
         }
 
-        .modal-content-portrait {
+        .modal-content.portrait {
             flex-direction: column;
             align-items: center;
             margin-top: 0;
@@ -251,18 +251,10 @@
     function setModalLayout() {
         const modalContent = document.querySelector(".modal-content")
         const modaldesc = document.querySelector(".modal-desc")
-        if (window.innerHeight > window.innerWidth) {
-            modalContent.classList.remove("modal-content")
-            modalContent.classList.add("modal-content-portrait")
-            modaldesc.classList.remove("modal-desc")
-            modaldesc.classList.add("modal-desc-portrait")
-        } else {
-            modalContent.classList.remove("modal-content-portrait")
-            modalContent.classList.add("modal-content")
-            modaldesc.classList.remove("modal-desc-portrait")
-            modaldesc.classList.add("modal-desc")
-        }
-    }
+        const isPortrait = window.innerHeight > window.innerWidth
+        modalContent.classList.toggle("portrait", isPortrait);
+        modaldesc.classList.toggle("portrait", isPortrait);
+    } 
 </script>
 
 </html>
