--- a/petpack/index.html
+++ b/petpack/index.html
@@ -57,7 +57,6 @@
             padding: 0 12px 12px 12px;
             border-radius: 12px;
         }
-
         /*change the display to flex once the modal is shown*/
         .modal_hide {
             display: none;
@@ -121,7 +120,7 @@
             width: 100vw;
             height: 100vh;
             background-color: rgba(0, 0, 0, 0.5);
-            z-index: -1;
+            z-index: 999;
         }
     </style>
 </head>
@@ -148,7 +147,7 @@
         modalBack.addEventListener("click", () => {
             closeModal()
         })
-        modalBack.addEventListener("keydown", () => {
+        document.addEventListener("keydown", () => {
             if (e.key === "Escape") {
                 closeModal()
             }
