--- a/petpack/index.html
+++ b/petpack/index.html
@@ -249,8 +249,8 @@
             modal.classList.remove("modal_hide")
             modal.classList.add("modal_shown")
             const modalBack = document.querySelector(".modal_back")
-            modal.classList.remove("modal_shown")
-            modal.classList.add("modal_hide")
+            modal.classList.remove("modal_hide")
+            modal.classList.add("modal_shown")
             const modalTitle = document.querySelector(".modal-title")
             const modalImage = document.querySelector(".modal-image")
             modalTitle.textContent = title
