--- a/petpack/index.html
+++ b/petpack/index.html
@@ -127,7 +127,7 @@
 </head>
 
 <body>
-    <div class="modal_back"></div>
+    <div class="modal_back modal_hide"></div>
     <div class="modal_hide modal">
         <h3 class="modal-x">&times;</h3>
         <h4 class="modal-title"></h4>
