--- a/petpack/index.html
+++ b/petpack/index.html
@@ -237,8 +237,8 @@
         modal.classList.remove("modal_shown")
         modal.classList.add("modal_hide")
         const modalBack = document.querySelector(".modal_back")
-        modal.classList.remove("modal_shown")
-        modal.classList.add("modal_hide")
+        modalBack.classList.remove("modal_shown")
+        modalBack.classList.add("modal_hide")
     }
     //modal logic
     function event_temp(newDiv, title, id, imgSrc) {
@@ -249,8 +249,8 @@
             modal.classList.remove("modal_hide")
             modal.classList.add("modal_shown")
             const modalBack = document.querySelector(".modal_back")
-            modal.classList.remove("modal_hide")
-            modal.classList.add("modal_shown")
+            modalBack.classList.remove("modal_hide")
+            modalBack.classList.add("modal_shown")
             const modalTitle = document.querySelector(".modal-title")
             const modalImage = document.querySelector(".modal-image")
             modalTitle.textContent = title
