--- a/petpack/index.html
+++ b/petpack/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Name II Pet Pack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylehseet" href="styles/modals.css">
+    <link rel="stylehseet" href="modals.css">
     <style>
         body {
             background-color: #070e12;
