--- a/petpack/index.html
+++ b/petpack/index.html
@@ -93,8 +93,8 @@
 
         .modal_back {
             position: fixed;
-            width: 200vw;
-            height: 200vh;
+            width: 100000px;
+            height: 100000px;
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
