--- a/petpack/index.html
+++ b/petpack/index.html
@@ -172,7 +172,7 @@
             let scx = -1
             shortCategories.forEach(item => {
                 scx++
-                // if the category does not exist, we create onesa
+                // if the category does not exist, we create one
                 if (!document.querySelector("." + shortCategories[scx] + ".heading")) {
 
                     let newH2 = document.createElement('h1')
