--- a/petpack/index.html
+++ b/petpack/index.html
@@ -168,7 +168,7 @@
             let id = references[x].id
             let title = references[x].title
             let desc = references[x].desc
-            let entity = referenced[x].entity
+            let entity = references[x].entity
 
             let scx = -1
             shortCategories.forEach(item => {
