--- a/petpack/index.html
+++ b/petpack/index.html
@@ -144,6 +144,7 @@
         const modalBack = document.querySelector(".modal_back")
         modalX.addEventListener("click", () => {
             closeModal()
+            console.log("clicked x")
         })
         modalBack.addEventListener("click", () => {
             closeModal()
