--- a/petpack/index.html
+++ b/petpack/index.html
@@ -92,10 +92,10 @@
         }
 
         .modal_back {
-            x: 0;
-            y: 0;
             position: fixed;
             width: 100000px;
+            top: 0;
+            left: 0;
             height: 100000px;
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
