--- a/petpack/index.html
+++ b/petpack/index.html
@@ -280,7 +280,7 @@
         modaldesc.classList.toggle("portrait", isPortrait);
     } 
     async function loadFull(Src, newDiv) {
-        Src += "-full"
+        Src += "-full.webp"
         const imgDiv = newDiv.querySelector('.item_image')
         const fullImg = new Image()
         fullImg.src = Src
