--- a/petpack/index.html
+++ b/petpack/index.html
@@ -268,7 +268,7 @@
             const modalImage = document.querySelector(".modal-image")
             modalTitle.textContent = title
             modalImage.src = imgSrc
-            setParam("id", id)
+            setParam("id", id, push)
             setModalLayout()
         });
     }
