--- a/petpack/index.html
+++ b/petpack/index.html
@@ -248,6 +248,7 @@
         const modalBack = document.querySelector(".modal_back")
         modalBack.classList.remove("modal_shown")
         modalBack.classList.add("modal_hide")
+        deleteParam()
     }
     //modal logic
     function event_temp(newDiv, title, id, imgSrc, desc) {
